# powerplant-coding-challenge

./: .dockerignore  .gitignore  CHALLENGE.md  Dockerfile  README.md  challenge.md  config.py  pyproject.toml  runapp  runapp.bat  runapp.ps1  wsgi.py
.github/workflows/: python-app.yml
app/: enums.py  main.py  planner.py
app/routers/: __init__.py  health.py  productionplan.py
app/schemas/: __init__.py  forecast.py  fuels.py  powerplant.py  production_plan.py
app/solvers/: abstract_solver.py  backtrack.py  lp_solver.py
powerplant/: __init__.py  network.py  productionplan.py
test/: fixtures.py  helpers.py  test_productionplan.py
test/mocks/: payload4.json  payload5.json  payload6.json
tests/: test_planner.py
tests/payloads/: payload4.json
tests/routers/: test_productionplan.py
