[tool.poetry]
name = "powerplant-coding-challenge"
version = "0.1.0"
description = ""
authors = ["Simon De Grève"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^1.1.2"
gunicorn = "^20.0.4"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pylint = "^2.6.2"
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
