[project]
name = "powerplant-coding-challenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "black>=26.3.1",
    "fastapi[standard]>=0.135.1",
    "flake8>=7.3.0",
    "isort>=8.0.1",
    "pulp>=3.3.0",
    "pytest>=9.0.2",
    "structlog>=25.5.0",
]


[tool.fastapi]
app = "app.main:app"
